# sven_catkin_ws

./: polynomial_test.py  readme.md
src/franka_ros/franka_custom_controllers/: CMakeLists.txt  franka_custom_controllers_plugin.xml  package.xml
src/franka_ros/franka_custom_controllers/cfg/: compliance_param.cfg  compliance_param_demonstration.cfg
src/franka_ros/franka_custom_controllers/config/: franka_custom_controllers.yaml
src/franka_ros/franka_custom_controllers/include/franka_custom_controllers/: demonstration_cartesian_impedance_controller.h  impact_aware_cartesian_impedance_controller.h
src/franka_ros/franka_custom_controllers/launch/: demonstration_cartesian_impedance_controller.launch  impact_aware_cartesian_impedance_controller.launch  impact_aware_cartesian_impedance_controller_sim.launch
src/franka_ros/franka_custom_controllers/msg/: ControlOptions.msg  DemonstrationControllerState.msg  ForceStamped.msg  ImpactControlState.msg  RobotState.msg
src/franka_ros/franka_custom_controllers/src/: demonstration_cartesian_impedance_controller.cpp  impact_aware_cartesian_impedance_controller.cpp
src/sven_ros/: CMakeLists.txt  package.xml  setup.py
src/sven_ros/config/impact_aware_controller/: settings.yaml
src/sven_ros/config/jump_detector/: external_force.yaml  force_rate.yaml  jump_detector_joint1.yaml  jump_detector_joint2.yaml  jump_detector_joint3.yaml  jump_detector_joint4.yaml  jump_detector_joint5.yaml  jump_detector_joint6.yaml  jump_detector_joint7.yaml
src/sven_ros/include/impedance_control/: robot_command.h
src/sven_ros/include/jump_detector/: bounder.h  constant_bounder.h  data_container.h  datapoint.h  filter.h  impact_aware_force_filter.h  jump_aware_filter.h  jump_detector.h  least_squares_predictor.h  polynomial.h  predictor.h  weighted_predictor.h
src/sven_ros/include/jump_detector_new/: bounder.h  constant_bounder.h  data_container.h  datapoint.h  force_rate_bounder.h  force_rate_predictor.h  impact_aware_force_filter.h  jump_aware_filter.h  jump_detector.h  least_squares_predictor.h  predictor.h  vec_distance.h
src/sven_ros/include/sven_ros/: baseline_controller_node.h  external_force_jump_detector_node.h  franka_state_jump_detector_node.h  joint_jump_detector_node.h  jump_detector_node.h  sven_ros_controller_node.h  vive_pose_converter_node.h
src/sven_ros/include/sven_ros/old/: joint_jump_detector_node.h  jump_detector_node.h
src/sven_ros/launch/: baseline_controller.launch  baseline_controller2.launch  external_force_jump_detector.launch  force_rate_impact_detector.launch  force_rate_impact_detector2.launch  joint_jump_detector.launch  jump_detector.launch  move_to_start.launch  move_to_start2.launch  sven_ros_controller.launch  sven_ros_controller2.launch  trajectory_controller.launch  vive_pose_converter.launch  vive_pose_converter2.launch
src/sven_ros/notes/: htc_vive
src/sven_ros/scripts/: demo6.bag  record.sh  record_franka_state.sh  record_pose.sh  replay_trajectory.sh  sven_ros_controller_node.py  traj6.1_3.csv  vive_pose_converter_node.py  vive_pose_converter_node2.py
src/sven_ros/scripts/bash_scripts/: record.sh  record_input.sh  replay_trajectory.sh  rosbag2csv.sh  setup.sh
src/sven_ros/scripts/jump_detection/: .gitignore  __init__.py  analyze_bound.ipynb  analyze_bound.py  create_trajectory.ipynb  create_trajectory.py  design_trajectory.ipynb  detect_jumps.ipynb  detect_jumps.py  evaluate.ipynb  evaluate_plot_all_zoom.ipynb  evaluate_promps.py  evaluate_promps_plot_or_per_phase.py  evaluate_promps_plot_y_per_phase.py  evaluate_promps_plot_z_example.py  evaluate_promps_plot_z_per_phase.py  identify_outlier_demos.py  impact_detection_delay.py  impact_interval_window.py  jump_detection_bump_in_plastic.ipynb  jump_detection_bump_in_rubber.ipynb  jump_detection_bump_in_small_rubber.ipynb  jump_detection_bump_wood_in_table.ipynb  jump_detector_analysis.ipynb  jump_detector_analysis2.ipynb  open_pickle.py  plot_data.ipynb  plot_different_data.py  plot_different_data2.py  plot_external_force.py  plot_htc_vive.py  plot_impact_data_z.py  plot_joint_velocities.py  plot_z_data.py  post_impact_force.ipynb  post_impact_force2.ipynb  post_impact_velocity.ipynb  post_impact_velocity.py  readme.md  sandbox.ipynb  (+3 more)
src/sven_ros/scripts/jump_detection/.ipynb_checkpoints/: create_trajectory-checkpoint.ipynb  design_trajectory-checkpoint.ipynb  detect_jumps-checkpoint.ipynb  evaluate-checkpoint.ipynb  jump_detection_bump_in_wood-checkpoint.ipynb  jump_detection_bump_wood_in_rubber-checkpoint.ipynb  jump_detector_analysis-checkpoint.ipynb  jump_detector_analysis2-checkpoint.ipynb  plot_data-checkpoint.ipynb  post_impact_force2-checkpoint.ipynb  post_impact_velocity-checkpoint.ipynb  sandbox-checkpoint.ipynb
src/sven_ros/scripts/jump_detection/config/: __init__.py  config.py  config_create_trajectory.py  config_design_trajectory.py  config_evaluate_promps.py  config_evaluation.py  config_impact_detection_delay.py  config_jump_detection.py  (+1 more)
src/sven_ros/scripts/nodes/: baseline_controller_node.py  force_rate_impact_detector_node.py  move_to_start.py  move_to_start2.py  sven_ros_controller_node.py  trajectory_controller_node.py  vive_pose_converter_node.py  vive_pose_converter_node2.py
src/sven_ros/scripts/reference_trajectory/: .gitignore  bounder.py  cartesian_pose_reader.py  create_trajectory.py  datapoint.py  dataset.py  demo_ja_filter.py  demo_ja_filter_cart.py  detect_jumps.py  ext_ref.py  filter.py  ja_filter.py  ja_filter_cart.py  joint_reader.py  jump_aware_filter.py  least_squares_filter.py  main.py  open_pickle.py  plot_data.py  rosbag_reader.py  sandbox.py  setup.py  setup.sh  traj6.1_3.bag  tune_jump_detector.py  wavelet_demo.py
src/sven_ros/src/: baseline_controller_node.cpp  external_force_jump_detector_node.cpp  force_rate_impact_detector_node.cpp  joint_jump_detector_node.cpp  jump_detector_node.cpp  sven_ros_controller_node.cpp  vive_pose_converter_node.cpp
src/sven_ros/src/old/: external_force_jump_detector_node.cpp
src/sven_ros/src/sven_ros/: __init__.py  end_effector_handler.py  impedance_control_mode.py
(+286 files in other folders)
